[package]
name = "rss-wallpaper"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Change your wallpaper to the latest item in an RSS feed"
repository = "https://github.com/CoffeeCoder1/rss-wallpaper"
readme = "README.md"
keywords = ["rss", "feed", "desktop", "wallpaper", "background"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
env_logger = "0.11.3"
log = "0.4.21"
reqwest = "0.12.2"
rss = "2.0.7"
tokio = { version = "1.37.0", features = ["full"] }
wallpaper = { version = "3.2.0", features = ["from_url"] }
